# crossfilter

./: .envrc  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  conftest.py  docker-compose.yml  playground.ipynb  pyproject.toml  run_tests_parallel.py  test_standalone.py  tools.toml
.devcontainer/: README.md  devcontainer.json
.github/workflows/: devcontainer.yml
crossfilter/: __main__.py  main.py
crossfilter/core/: backend_frontend_shared_schema.py  bucketing.py  bucketing_test.py  clip_embedding_projection_state.py  data_schema.py  data_schema_test.py  data_subset.py  filter_state.py  filter_state_test.py  geo_projection_state.py  geo_projection_state_test.py  projection.py  projection_state.py  projection_state_test.py  projection_test.py  quantization.py  quantization_test.py  schema.py  schema_constants.py  schema_constants_test.py  schema_test.py  serialization.py  session_state.py  session_state_test.py  siglip2_embedding_functions.py  siglip2_embedding_functions_test.py  temporal_projection_state.py  temporal_projection_state_test.py  uuid_lib.py  uuid_lib_test.py
crossfilter/core/__snapshots__/: bucketing_test.ambr  geo_projection_state_test.ambr  projection_test.ambr  quantization_test.ambr  session_state_test.ambr  siglip2_embedding_functions_test.ambr  temporal_projection_state_test.ambr
crossfilter/data_ingestion/: README.md  gpx_parser.py  gpx_parser_test.py  ingest_gpx_files.py  ingest_gpx_files_test.py  ingest_lightroom_catalogs_test.py  lightroom_parser.py  lightroom_parser_test.py  sqlite_space_analysis.py  sqlite_utils.py  sqlite_utils_test.py
crossfilter/data_ingestion/__snapshots__/: gpx_parser_test.ambr  sqlite_utils_test.ambr
crossfilter/data_ingestion/gpx/: google_takeout_parser.py  gpx_parser.py  (+6 more)
crossfilter/inference/: README.md  compute_embeddings_cli.py  compute_embeddings_cli_test.py  embedding_interface.py  fake_embedding_functions.py  fake_embedding_functions_test.py  run_embeddings_cli.py  run_embeddings_cli_test.py  run_umap.py  run_umap_test.py  siglip2_embedding_functions.py  siglip2_embedding_functions_test.py  test_fixtures.py  umap_haversine.py  umap_haversine_test.py
crossfilter/static/: app.js  index.html  temporal-cdf.html
crossfilter/visualization/: clip_embedding_plot.py  clip_embedding_plot_test.py  geo_plot.py  geo_plot_test.py  plot_common.py  plots.py  plots_test.py  temporal_cdf_plot.py  temporal_cdf_plot_test.py
dev/: fix_format
dev/warm_cache/: 01_playwright_install.py  02_hf_model_download.py
dev_data/: README.md
docs/: frontend.md
gpx_viewer/: __init__.py  __main__.py  main.py
notebooks/: playground.ipynb  umap_haversine_playground.ipynb
test_data/: lightroom_embedding_vectors_sample.sqlite  sample_100.jsonl
tests/: fixtures_server.py  test_api_changes.py  test_filter_api.py  test_frontend_e2e.py  test_hello_world.py  test_hello_world_e2e.py  test_main_cli.py  test_sample_data.py  test_temporal_cdf_e2e.py  test_temporal_cdf_visual.py  test_uuid_endpoints.py  test_uuid_preview_images.py
tests/__snapshots__/: test_filter_api.ambr  test_main_cli.ambr  test_uuid_preview_images.ambr
tests/frontend/: test_frontend_e2e.py  test_frontend_point_click.py  test_frontend_ui_basic.py  test_frontend_ui_comprehensive.py  test_hello_world_e2e.py
tests/util/: syrupy_html_snapshot.py
(+49 files in other folders)
